longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn 
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.cluster.local
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - longhorn.cluster.local
    secretName: longhorn-tls
